--- a/CodeFirst/appsettings.json
+++ b/CodeFirst/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SqlCon": "Server=tcp:localhost,1433; Database=poc;User=sa;Password=phantom88@00;"
+    "SqlCon": "Server=tcp:localhost,1433; Database=poc;User=sa;Password=;"
 
   }
 }
